// Vitest Snapshot v1

exports[`affects custom imports: { include: '**/*' } 1`] = `
{
  "default_exports": [
    "src",
    "aspect",
    "width",
    "height",
    "format",
  ],
  "deliminator": ",",
  "exclude": "",
  "include": "**/*",
  "post_process": [Function],
  "transformers": [],
}
`;

exports[`affects custom imports: { include: '**/*', exclude: '**/*.jpeg' } 1`] = `
{
  "default_exports": [
    "src",
    "aspect",
    "width",
    "height",
    "format",
  ],
  "deliminator": ",",
  "exclude": "**/*.jpeg",
  "include": "**/*",
  "post_process": [Function],
  "transformers": [],
}
`;

exports[`affects custom imports: { transformers: [Array] } 1`] = `
{
  "default_exports": [
    "src",
    "aspect",
    "width",
    "height",
    "format",
  ],
  "deliminator": ",",
  "exclude": "",
  "include": "**/*.{heic,heif,avif,jpeg,jpg,png,tiff,webp,gif}?*",
  "post_process": [Function],
  "transformers": [
    {
      "matcher": [Function],
      "name": "noop",
      "transform": [Function],
    },
  ],
}
`;

exports[`affects custom imports: {} 1`] = `
{
  "default_exports": [
    "src",
    "aspect",
    "width",
    "height",
    "format",
  ],
  "deliminator": ",",
  "exclude": "",
  "include": "**/*.{heic,heif,avif,jpeg,jpg,png,tiff,webp,gif}?*",
  "post_process": [Function],
  "transformers": [],
}
`;

exports[`affects custom imports: undefined 1`] = `
{
  "default_exports": [
    "src",
    "aspect",
    "width",
    "height",
    "format",
  ],
  "deliminator": ",",
  "exclude": "",
  "include": "**/*.{heic,heif,avif,jpeg,jpg,png,tiff,webp,gif}?*",
  "post_process": [Function],
  "transformers": [],
}
`;

exports[`does not apply invalid config: { include: 10 } 1`] = `[Error: Error: include must be of type String.]`;

exports[`does not apply invalid config: { test: true } 1`] = `[Error: Error: test is not allowed.]`;

exports[`does not apply invalid config: { transformers: [Array] } 1`] = `[Error: Error: transformers.0 must be of type Object.,Error: transformers.1 must be of type Object.,Error: transformers.0.name is required.,Error: transformers.1.name is required.,Error: transformers.0.matcher is required.,Error: transformers.1.matcher is required.,Error: transformers.0.transform is required.,Error: transformers.1.transform is required.]`;
